# Street-Monitoring-System

./: README.md
Inter-process-communication/: CMakeLists.txt  README.md  driver.cpp  graph-gen.py  random-street-gen.cpp  shotest-path-finder.cpp
Min-Vertex-Cover/: CMakeLists.txt  Note_on_multithread.md  README.md  graph.h  solver-rff.cpp  solver.cpp
